Fixed dropdown z-index

--- a/frontend/src/styles/nav.scss
+++ b/frontend/src/styles/nav.scss
@@ -5,6 +5,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    z-index: 5;
 
     position: sticky;
     top: 0px;
